// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldString > render with disabled 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    disabled=""
    id="dummy"
    name="dummy"
    path="dummy"
    type="text"
  />
</DocumentFragment>
`;

exports[`FieldString > render with place holder 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    name="dummy"
    path="dummy"
    placeholder="placeholder"
    type="text"
  />
</DocumentFragment>
`;

exports[`FieldString > renders inside of model context 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    autocomplete="off"
    class="form-control"
    id="dummy"
    name="dummy"
    path="dummy"
    type="text"
  />
</DocumentFragment>
`;

exports[`FieldString > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
